--- a/css/style.css
+++ b/css/style.css
@@ -21,98 +21,11 @@ a{
 	width:100%;
 	height: 100vh;
 	box-sizing: border-box;
-	background-size: 1330px;
+	background-size: 1300px;
 	background-position: right bottom;
 	background-repeat: no-repeat;
 	background-image: url("../images/bg.png");
 	background-color: #edf1fd;
-}
-
-/* Bottom style hover effect */
-.hover-cv {
-	position: relative;
-	display: inline-block;
-	padding: 15px 30px;
-	color: #2196f3;
-	text-transform: uppercase;
-	letter-spacing: 4px;
-	text-decoration: none;
-	font-size: 24px;
-	overflow: hidden;
-	transition: 0.2s;
-	background-color:
-
-}
-a:hover{
-	color: #255748;
-	background: #2196f3 ;
-	box-shadow:  0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3 ;
-	transition-delay: 1s;
-}
-a span{ position: absolute;
-	display: block;
-}
-a span:nth-child(1)
-{
-	top: 0;
-	left: -100%;
-	width: 100%;
-	height: 2px;
-	background: linear-gradient(90deg, transparent,#2196f3);
-}
-a:hover  span:nth-child(1){
-
-left: 100%;
-transition: 1s;
-}
-
-a span{ position: absolute;
-	display: block;
-}
-a span:nth-child(3)
-{
-	bottom: 0;
-	right: -100%;
-	width: 100%;
-	height: 2px;
-	background: linear-gradient(270deg, transparent,#2196f3);
-}
-a:hover  span:nth-child(3){
-
-right: 100%;
-transition: 1s;
-transition-delay: 0.5s;
-}
-
-a span:nth-child(2)
-{
-	top: -100%;
-	right: 0;
-	width: 2px;
-	height: 100%;
-	background: linear-gradient(180deg, transparent,#2196f3);
-}
-a:hover  span:nth-child(2)
-{
-
-top: 100%;
-transition: 1s;
-transition-delay: 0.25s;
-}
-a span:nth-child(4)
-{
-	bottom: -100%;
-	left: 0;
-	width: 2px;
-	height: 100%;
-	background: linear-gradient(360deg, transparent,#2196f3);
-}
-a:hover  span:nth-child(4)
-{
-
-bottom: 100%;
-transition: 1s;
-transition-delay: 0.75s;
 }
 nav{
 	display:flex;
@@ -236,7 +149,91 @@ nav{
 	color:#17d1ac;
 	transition: all ease 0.5s;
 }
+.cv {
+	position: relative;
+	display: inline-block;
+	padding: 15px 30px;
+	color: #2196f3;
+	text-transform: uppercase;
+	letter-spacing: 4px;
+	text-decoration: none;
+	font-size: 24px;
+	overflow: hidden;
+	transition: 0.2s;
+	background-color:
 
+}
+a:hover{
+	color: #255748;
+	background: #2196f3 ;
+	box-shadow:  0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3 ;
+	transition-delay: 1s;
+}
+a span{ position: absolute;
+	display: block;
+}
+a span:nth-child(1)
+{
+	top: 0;
+	left: -100%;
+	width: 100%;
+	height: 2px;
+	background: linear-gradient(90deg, transparent,#2196f3);
+}
+a:hover  span:nth-child(1){
+
+left: 100%;
+transition: 1s;
+}
+
+a span{ position: absolute;
+	display: block;
+}
+a span:nth-child(3)
+{
+	bottom: 0;
+	right: -100%;
+	width: 100%;
+	height: 2px;
+	background: linear-gradient(270deg, transparent,#2196f3);
+}
+a:hover  span:nth-child(3){
+
+right: 100%;
+transition: 1s;
+transition-delay: 0.5s;
+}
+
+a span:nth-child(2)
+{
+	top: -100%;
+	right: 0;
+	width: 2px;
+	height: 100%;
+	background: linear-gradient(180deg, transparent,#2196f3);
+}
+a:hover  span:nth-child(2)
+{
+
+top: 100%;
+transition: 1s;
+transition-delay: 0.25s;
+}
+a span:nth-child(4)
+{
+	bottom: -100%;
+	left: 0;
+	width: 2px;
+	height: 100%;
+	background: linear-gradient(360deg, transparent,#2196f3);
+}
+a:hover  span:nth-child(4)
+{
+
+bottom: 100%;
+transition: 1s;
+transition-delay: 0.75s;
+}
 /* About section */
 
 #about{
@@ -654,8 +651,6 @@ width: 100%;
 		top: 50%;
 		transform: translate(-10%,-50%);
 	}
-	
-		
 	.about-model img{
 		height:400px;
 	}
@@ -722,10 +717,6 @@ width: 100%;
 		}
 	nav{
 		padding:10px 30px;
-	}
-	.hover{
-		left:10%;
-		top: 50%;
 	}
 	
 	nav ul{
