--- a/css/style.css
+++ b/css/style.css
@@ -422,6 +422,10 @@ width: 100%;
 	height: 100%;
 	object-fit: cover;
 }
+.p-box:hover{
+	background-color: #00FF00;
+	cursor: wait;
+}
 .p-container{
 	width: 90%;
 	height:70vh;
