--- a/css/style.css
+++ b/css/style.css
@@ -422,7 +422,7 @@ width: 100%;
 	height: 100%;
 	object-fit: cover;
 }
-.p-box:hover{
+p-headind:hover{
 	background-color: #00FF00;
 	cursor: wait;
 }
