--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,23 @@ body{
 ul{
 	list-style:none;
 }
+.con.me{
+	box-sizing: border-box;
+	font-family: consolas;
+	display:flex;
+	min-height: 100vh;
+	flex-direction:column;
+	position: relative;
+	background: #050801;
+	font-size: 24px;
+	color: #03e9f4;
+	text-decoration: none;
+	text-transform: uppercase;
+	overflow: hidden;
+	transition: 0.5s;
+	letter-spacing: 4px;
+}
+	
 a{
 	text-decoration:none;
 }
