--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
 ul{
 	list-style:none;
 }
-.con.me{
+.con.me a{
 	box-sizing: border-box;
 	font-family: consolas;
 	display:flex;
@@ -27,6 +27,10 @@ ul{
 	overflow: hidden;
 	transition: 0.5s;
 	letter-spacing: 4px;
+}
+.con.me a:hover{
+
+
 }
 	
 a{
