--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,13 @@ ul{
 	letter-spacing: 4px;
 }
 .con.me a:hover{
+	background: #03e9f4;
+	color: #050801;
+	box-shadow: 0 05px #03e9f4,
+		    0 0 25px #03e9f4,
+		    0 0 75px #03e9f4,
+		    0 0 100px #03e9f4,
+		
 
 
 }
@@ -444,8 +451,8 @@ width: 100%;
 	object-fit: cover;
 }
 .p-headind:hover{
-	background-color: #00FF00;
-	cursor: wait;
+	background-color: #1670bb;
+	border-size: 1px;
 }
 .p-container{
 	width: 90%;
