--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
 ul{
 	list-style:none;
 }
-.con.me a{
+.con-me a{
 	box-sizing: border-box;
 	font-family: consolas;
 	display:flex;
@@ -28,7 +28,7 @@ ul{
 	transition: 0.5s;
 	letter-spacing: 4px;
 }
-.con.me a:hover{
+.con-me a:hover{
 	background: #03e9f4;
 	color: #050801;
 	box-shadow: 0 05px #03e9f4,
@@ -36,8 +36,6 @@ ul{
 		    0 0 75px #03e9f4,
 		    0 0 100px #03e9f4,
 		
-
-
 }
 	
 a{
